...
                ){
                    Icon(
                        imageVector = Icons.Default.Send,
                        contentDescription = "Data Send",
                        Modifier.padding(end = 8.dp)
                    )
                    Text(text = "Sending Data")
                }
            }

            TextButton(
                onClick = { onMerchantEditNavigation() },
                modifier = Modifier
...
                ){
                    Icon(
                        imageVector = Icons.Default.List,
                        contentDescription = "Merchant Names",
                        Modifier.padding(end = 8.dp)
                    )
                    Text(text = "List of Known Merchants")
                }

            }
        }
    }

...
