...
                        modifier = Modifier
                            .fillMaxWidth(fraction = 0.8F)
                    ) {
                        DataInputTypeSelectionFAB(
                            onClick = { onNavigateToCamera() },
                            iconId = R.drawable.baseline_photo_camera_24,
                            contentDescription = "Camera",
                            text = "From Camera"
                        )
                        DataInputTypeSelectionFAB(
                            onClick = { onNavigateToInputForm() },
                            iconId = R.drawable.baseline_edit_square_24,
                            contentDescription = "Manual Input",
                            text = "From Manual Input"
                        )
                    }
                }
            }
        }
...
